--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ psycopg2 = "^2.9.9"
 pillow = "^10.2.0"
 django-celery-beat = "^2.5.0"
 requests = "^2.31.0"
+pydantic = "^2.5.3"
 
 
 [build-system]
